<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Myspeedz</string>
    <string name="line">Divider</string>
    <string name="app_crash">Program crashed, please restart.</string>
    <string name="confirm">Confirm</string>
    <string name="Cancel">Cancel</string>
    <string name="title_activity_activity_main">Myspeedz</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="back">&lt;  </string>
    <string name="chart">Chart</string>
    <string name="list">List</string>
    <string name="setup">Setup</string>
    <string name="help">Help</string>
    <string name="delete_all">Delete All</string>
    <string name="speeddefaul">0.0</string>
    <string name="speed_company">Km/h</string>
    <string name="clear">clear</string>
    <string name="save">save</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="user1">Default1</string>
    <string name="user2">Default2</string>
    <string name="new_user">Add New User</string>
    <string name="hight">Hight</string>
    <string name="weight">Weight</string>
    <string name="BMI">BMI</string>
    <string name="speed">Speed</string>
    <string name="title_activity_activity_lungcher">ActivityLungcher</string>
    <string name="title_activity_activity__list">List</string>
    <string name="text_date">Date</string>
    <string name="Scan_Device">Device</string>
    <string name="app_bt_conn">Bluetooth Conn</string>

    <!-- Controller Activity -->
    <string name="status_message">Welcome to APRA...</string>

    <!-- BluetoothConn -->
    <string name="not_connected">You are not connected to a device</string>
    <string name="bt_not_enabled_leaving">Bluetooth was not enabled. Leaving Bluetooth Chat.</string>
    <string name="title_connecting">connecting...</string>
    <string name="title_connected_to">connected: </string>
    <string name="title_not_connected">not connected</string>
    <string name="disconnect_socket">Disconnect socket</string>
    <string name="about_title">About</string>
    <string name="about_content">    Version :1.0.1 \n
    Modification : Use new API to fix the bug of SSP. \nChange the package name for compatibly with the old App.</string>
    <string name="about_dialog_ok">OK</string>

    <!-- DeviceListActivity -->
    <string name="scanning">scanning for devices...</string>
    <string name="select_device">select a device to connect</string>
    <string name="none_paired">No devices have been paired</string>
    <string name="none_found">No devices found</string>
    <string name="title_paired_devices">Promt</string>
    <string name="title_other_devices">Other Available Devices</string>
    <string name="button_scan">Scan</string>

    <!-- ConnectedDeviceListActivity -->
    <string name="title_connected_devices">Connected Devices</string>
    <string name="select_disconnect_device">select a device to disconnect</string>

    <!-- AboutInfoActivity -->


    <!-- Options Menu -->
    <string name="connect">Connect a device</string>
    <string name="discoverable">Make discoverable</string>
    <string name="disconnect">Disconnect connection</string>
    <string name="setting">Setting</string>
    <string name="monitor">Start Monitor</string>
    <string name="about">About</string>

    <!-- AudioStateModel -->
    <string name="proximity_alert">Proximity alert</string>

    <!-- SettingPreferenceActivity -->
    <string name="signal_level_pref_category">Signal level notification</string>

    <!-- Settings Menu -->
    <string name="pref_setting">Preference setting</string>

    <!-- file_dialog -->
    <string name="file_dialog">File dialog</string>
    <string name="location">Location</string>
    <string name="cant_read_folder">folder can\'t be read!</string>
    <string name="nnew">New</string>
    <string name="select">Select</string>
    <string name="file_name">File name:</string>
    <string name="cancel">Cancel</string>
    <string name="create">Save</string>
    <string name="no_data">No Data</string>
    <string name="speed_units">Change speed</string>
    <string name="Model">Change model</string>
    <string name="pattern">pattern</string>
    <string name="language">Change language</string>
    <string name="english">English</string>
    <string name="user">user</string>
    <string name="title_activity_activity_seting">ActivitySeting</string>
    <color name="main_listviewtext_color">#505050</color><!--字体颜色-->
    <string name="rename">Rename</string>
    <string name="Choose">Choose</string>
    <string name="delete">Delete</string>
    <string name="effect">effect on next start</string>
    <string name="again_to_exit">Pressed again to exit</string>
    <string name="username">UserName</string>

    <string name="model1">Single Mode</string>
    <string name="model_messge1">Practice by challenging yourself! Your highest 10 scores will be selected as records.</string>
    <string name="model_bottom1">BEAT YOUR SCORE</string>
    <string name="model2">Battle Mode</string>
    <string name="model_messge2">The rules are simple.Challenge your friends or teammates.5 pucks for each player,each round of scores will be recorded.</string>
    <string name="model_bottom2">BATTLE TO WIN</string>

    <string name="new_user_name">New User</string>
    <string name="user_name">User Name</string>
    <string name="user_name1">User Name1</string>
    <string name="new_name">New Name</string>
    <string name="single_model">Single Model</string>
    <string name="battle_model">Battle Model</string>

    <string name="per_title">Myspeedz Need location permission</string>
    <string name="per_message">Bluetooth communication relies on system location permission, please allow permission to open</string>
    <string name="per_cancel">Cancel</string>
    <string name="sure">Go open it</string>
</resources>
