<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".ui.fragment.login.other.ListFragment">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="0dip"
        android:layout_weight="1"
        android:background="@drawable/bg_content"
        android:orientation="vertical">

        <RelativeLayout
            android:id="@+id/rl_top"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingBottom="10dip"
            android:paddingLeft="20dip"
            android:paddingRight="20dip"
            android:paddingTop="10dip">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/text_date"
                android:textColor="@color/white"
                android:textSize="18sp" />

            <TextView
                android:id="@+id/userName"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerHorizontal="true"
                android:text="@string/username"
                android:textColor="@color/white"
                android:textSize="24sp" />

            <TextView
                android:id="@+id/text_BMI"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentRight="true"
                android:text="@string/speed"
                android:textColor="@color/white"
                android:textSize="18sp" />
        </RelativeLayout>

        <ListView
            android:id="@+id/list_speed"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_below="@+id/rl_top"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            android:background="@drawable/bg_list"
            android:paddingTop="15dip">

        </ListView>

        <ImageView
            android:id="@+id/arrow_left"
            android:layout_width="20dp"
            android:layout_centerVertical="true"
            android:layout_alignParentLeft="true"
            android:layout_height="40dp"
            android:src="@drawable/left"
            android:visibility="gone"/>

        <ImageView
            android:id="@+id/arrow_right"
            android:layout_width="20dp"
            android:layout_centerVertical="true"
            android:layout_alignParentRight="true"
            android:layout_height="40dp"
            android:src="@drawable/right"
            android:visibility="gone"/>

    </RelativeLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="50dip"
        android:background="@drawable/bg_foot"
        android:gravity="center"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/action_clear"
            android:layout_width="0dip"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:background="#f1f1f1"
            android:gravity="center"
            android:text="@string/delete_all"
            android:textColor="@color/link_title_text"
            android:textSize="18sp" />
    </LinearLayout>
</LinearLayout>