<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"

    tools:context="com.potent.ui.ActivityMain">

    <include
        android:id="@+id/layout_title"
        layout="@layout/layout_title" />

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="0dip"
        android:layout_weight="1"
        android:background="@drawable/bg_content"
        android:orientation="vertical">

        <androidx.viewpager.widget.ViewPager
            android:id="@+id/pager"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="25dip" />

        <ImageView
            android:id="@+id/arrow_left"
            android:layout_width="20dp"
            android:layout_centerVertical="true"
            android:layout_alignParentLeft="true"
            android:layout_height="40dp"
            android:src="@drawable/left"
            android:visibility="gone"/>

        <ImageView
            android:id="@+id/arrow_right"
            android:layout_width="20dp"
            android:layout_centerVertical="true"
            android:layout_alignParentRight="true"
            android:layout_height="40dp"
            android:src="@drawable/right"
            android:visibility="gone"/>
    </RelativeLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="50dip"
        android:layout_marginTop="20dip"
        android:background="@drawable/bg_foot"
        android:gravity="center"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/action_chart"
            android:layout_width="0dip"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:background="@drawable/bg_foot_text"
            android:gravity="center"
            android:text="@string/chart"
            android:textColor="@color/link_title_text"
            android:textSize="17dp" />

        <TextView
            android:id="@+id/action_list"
            android:layout_width="0dip"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:background="@drawable/bg_foot_text"
            android:gravity="center"
            android:text="@string/list"
            android:textColor="@color/link_title_text"
            android:textSize="17dp" />

        <TextView
            android:id="@+id/action_setup"
            android:layout_width="0dip"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:background="@drawable/bg_foot_text"
            android:gravity="center"
            android:text="@string/setup"
            android:textColor="@color/link_title_text"
            android:textSize="17dp" />

        <TextView
            android:id="@+id/action_help"
            android:layout_width="0dip"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:background="@drawable/bg_foot_text"
            android:gravity="center"
            android:text="@string/help"
            android:textColor="@color/link_title_text"
            android:textSize="17dp" />

        <TextView
            android:id="@+id/test"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:visibility="gone"
            android:text="testBlue" />
    </LinearLayout>

</LinearLayout>
