<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:expandable="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.potent.ui.ActivityMain"

    android:orientation="vertical">
    <include android:id="@+id/layout_title" layout="@layout/layout_title"/>
    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/motk_green"
        android:scrollbars="none">

        <LinearLayout
            android:id="@+id/mian_list"
            android:layout_width="match_parent"

            android:layout_height="match_parent"
            android:orientation="vertical">

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="40dip">

                <TextView
                    style="@style/set_little_style"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerVertical="true"
                    android:text="@string/setting" />
            </RelativeLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="10dp"
                android:layout_marginTop="10dp"
                android:background="@drawable/set_bg"
                android:orientation="vertical">

                <com.andexert.expandablelayout.library.ExpandableLayout
                    android:id="@+id/secend"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    expandable:contentLayout="@layout/view_content"
                    expandable:headerLayout="@layout/view_header" />

                <View
                    android:layout_width="match_parent"
                    android:layout_height="1dp"
                    android:background="@color/divider_color" />

                <com.andexert.expandablelayout.library.ExpandableLayout
                    android:id="@+id/first"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    expandable:contentLayout="@layout/view_content"
                    expandable:headerLayout="@layout/view_header" />

                <View
                    android:layout_width="match_parent"
                    android:layout_height="1dp"
                    android:background="@color/divider_color" />

                <com.andexert.expandablelayout.library.ExpandableLayout
                    android:id="@+id/third"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    expandable:contentLayout="@layout/view_content"
                    expandable:headerLayout="@layout/view_header" />

            </LinearLayout>



            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="40dip">

                <TextView
                    style="@style/set_little_style"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerVertical="true"
                    android:text="@string/user" />
            </RelativeLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="10dp"
                android:layout_marginTop="10dp"
                android:background="@color/white"
                android:orientation="vertical">

                <LinearLayout
                    android:id="@+id/userlist"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">

                </LinearLayout>

                <RelativeLayout
                    android:id="@+id/adduser"
                    android:layout_width="match_parent"
                    android:layout_height="50dip">

                    <ImageView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_alignParentRight="true"
                        android:layout_centerVertical="true"
                        android:layout_marginRight="15dip"
                        android:src="@drawable/arrow_right" />

                    <TextView
                        style="@style/set_style"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_centerVertical="true"
                        android:text="@string/new_user" />
                </RelativeLayout>

                <View
                    android:layout_width="match_parent"
                    android:layout_height="1dp"
                    android:background="@color/divider_color" />
            </LinearLayout>


            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="10dp"
                android:layout_marginBottom="20dp"
                android:layout_marginTop="20dp">

                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_marginTop="20dp"
                    android:background="@drawable/set_tips_bg">

                    <TextView
                        android:id="@+id/tv_set_tips_message"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        style="@style/set_tips_message_style"
                        android:layout_margin="20dp"
                        android:text="@string/model_messge1" />

                    <TextView
                        android:id="@+id/tv_set_tips_bottom"
                        android:gravity="center_horizontal"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_centerHorizontal="true"
                        android:layout_below="@+id/tv_set_tips_message"
                        style="@style/set_tips_bottom_style"
                        android:text="@string/model_bottom1" />
                </RelativeLayout>

                <TextView
                    android:id="@+id/tv_set_tips_title"
                    android:layout_centerHorizontal="true"
                    style="@style/set_tips_title_style"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:background="@color/motk_green"
                    android:paddingLeft="10dp"
                    android:paddingRight="10dp"
                    android:text="@string/model1" />
            </RelativeLayout>
        </LinearLayout>
    </ScrollView>

</LinearLayout>
